fix repo link in docs

--- a/lookup_table_demo/playground_Sec61b.ipynb
+++ b/lookup_table_demo/playground_Sec61b.ipynb
@@ -27,7 +27,7 @@
     "* 2D filament filter \n",
     "* size thresholding\n",
     "\n",
-    "Documentation for all functions and parameters: [API](https://github.com/AllenInstitute/aics-segmentation/blob/master/docs/API.md)"
+    "Documentation for all functions and parameters: [API](https://AllenCell.github.io/aics-segmentation)"
    ]
   },
   {
