fix skimage watershed deprecation

--- a/lookup_table_demo/playground_dots.ipynb
+++ b/lookup_table_demo/playground_dots.ipynb
@@ -49,7 +49,9 @@
     "# function for core algorithm\n",
     "from aicssegmentation.core.seg_dot import dot_3d, dot_3d_wrapper \n",
     "from aicssegmentation.core.pre_processing_utils import intensity_normalization, image_smoothing_gaussian_slice_by_slice\n",
-    "from skimage.morphology import remove_small_objects, watershed, dilation, erosion, ball     # function for post-processing (size filter)\n",
+    "from skimage.morphology import remove_small_objects,  dilation, erosion, ball     # function for post-processing (size filter)\n",
+    "from skimage.segmentation import watershed\n",
+    "\n",
     "from skimage.feature import peak_local_max\n",
     "from skimage.measure import label\n",
     "from scipy.ndimage import distance_transform_edt"
