--- a/lookup_table_demo/playground_lamp1.ipynb
+++ b/lookup_table_demo/playground_lamp1.ipynb
@@ -49,7 +49,8 @@
     "from aicssegmentation.core.seg_dot import dot_2d_slice_by_slice_wrapper\n",
     "from aicssegmentation.core.utils import hole_filling\n",
     "from aicssegmentation.core.pre_processing_utils import intensity_normalization, image_smoothing_gaussian_slice_by_slice\n",
-    "from skimage.morphology import remove_small_objects, watershed, dilation, erosion, ball     "
+    "from skimage.morphology import remove_small_objects,  dilation, erosion, ball  \n",
+    "from skimage.segmentation import watershed\n"
    ]
   },
   {
