--- a/lookup_table_demo/playground_shell.ipynb
+++ b/lookup_table_demo/playground_shell.ipynb
@@ -46,7 +46,8 @@
     "from aicssegmentation.core.vessel import filament_2d_wrapper\n",
     "from aicssegmentation.core.pre_processing_utils import intensity_normalization, image_smoothing_gaussian_3d\n",
     "from aicssegmentation.core.utils import get_middle_frame, hole_filling, get_3dseed_from_mid_frame\n",
-    "from skimage.morphology import remove_small_objects, watershed, dilation, ball"
+    "from skimage.morphology import remove_small_objects,  dilation, ball\n",
+    "from skimage.segmentation import watershed\n"
    ]
   },
   {
