fix peak local max indices deprecation

--- a/lookup_table_demo/playground_dots.ipynb
+++ b/lookup_table_demo/playground_dots.ipynb
@@ -52,7 +52,7 @@
     "from skimage.morphology import remove_small_objects,  dilation, erosion, ball     # function for post-processing (size filter)\n",
     "from skimage.segmentation import watershed\n",
     "\n",
-    "from skimage.feature import peak_local_max\n",
+    "from aicssegmentation.core.utils import peak_local_max_wrapper\n",
     "from skimage.measure import label\n",
     "from scipy.ndimage import distance_transform_edt"
    ]
@@ -294,7 +294,7 @@
     "# watershed\n",
     "minArea = 4\n",
     "Mask = remove_small_objects(bw>0, min_size=minArea, connectivity=1, in_place=False) \n",
-    "Seed = dilation(peak_local_max(struct_img,labels=label(Mask), min_distance=2, indices=False), selem=ball(1))\n",
+    "Seed = dilation(peak_local_max_wrapper(struct_img,label(Mask)), selem=ball(1))\n",
     "Watershed_Map = -1*distance_transform_edt(bw)\n",
     "seg = watershed(Watershed_Map, label(Seed), mask=Mask, watershed_line=True)"
    ]
